// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fretboard component with type strings, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "transparent",
      "highlight": Object {
        "oct2": "darkblue",
        "oct3": "blue",
        "oct4": "lightblue",
        "oct5": "lightgray",
        "selected": "orange",
      },
      "stringHeight": 40,
    }
  }
>
  <styled.div
    height={240}
  >
    <ViewPort
      height={240}
    >
      <StringsGraphic
        nrOfFrets={12}
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
      />
      <Board
        nrOfFrets={12}
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
      />
    </ViewPort>
  </styled.div>
</ThemeProvider>
`;

exports[`Fretboard component, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "transparent",
      "highlight": Object {
        "oct2": "darkblue",
        "oct3": "blue",
        "oct4": "lightblue",
        "oct5": "lightgray",
        "selected": "orange",
      },
      "stringHeight": 40,
    }
  }
>
  <styled.div
    height={240}
  >
    <ViewPort
      height={240}
    >
      <BoxesGraphic
        nrOfFrets={12}
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
      />
      <Board
        nrOfFrets={12}
        tuning={
          Array [
            "E2",
            "A2",
            "D3",
            "G3",
            "B3",
            "E4",
          ]
        }
      />
    </ViewPort>
  </styled.div>
</ThemeProvider>
`;
